<resources>
    <string name="app_name">SakernasEla</string>
    <string name="petugas">Petugas</string>
    <string name="admin">Admin</string>
    <string name="survei_angkatan_kerja_nasional_2021">Survei angkatan kerja nasional 2021</string>
    <string name="masuk">Masuk</string>
    <string name="passowrd">Passowrd</string>
    <string name="username">Username</string>
    <string name="login_admin">Login Admin</string>
    <string name="login_petugas">Login Petugas</string>
    <string name="list_petugas">List Petugas</string>
    <string name="koneksi_internet_buruk">koneksi internet buruk</string>
    <string name="tambah_petugas">Tambah petugas</string>
    <string name="password_petugas">Password petugas</string>
    <string name="nama_petugas">Nama petugas</string>
    <string name="sedang_memproses">Sedang memproses</string>
    <string name="persentase">Persentase</string>
    <string name="nomer_kk">Nomer Kartu Keluarga</string>
    <string name="kepala_keluarga">Nama kepala keluarga</string>
    <string name="alamat">Alamat</string>
    <string name="tambah">Tambah Keluarga</string>
    <string name="pengisian_kartu_keluarga">Pengisian Kartu Keluarga</string>
    <string name="tambah_anggota_keluarga">Tambah Anggota Keluarga</string>
    <string name="nomer_induk">Nomer induk</string>
    <string name="nama_anggota_keluarga">Nama anggota keluarga</string>
    <string name="selesai">Selesai</string>
    <string name="no_kk">No.kk :  </string>
    <string name="bpk">Bpk. </string>
    <string name="alamt">Alamat :  </string>
    <string name="ubah">Ubah</string>
    <string name="hapus">Hapus</string>
    <string name="pilih_petugas">Pilih petugas</string>
    <string name="masukkan_data">Masukkan Data</string>
    <string name="pengisi_data_keluarga">Pengisi Data Keluarga</string>
    <string name="nama">Nama</string>
    <string name="daftar_responden">Daftar Responden</string>
    <string name="keluarga_responden">Keluarga Responden</string>
    <string name="nomer_induk_kependudukan">Nomer Induk Kependudukan</string>
    <string name="status_perkawinan">Status perkawinan</string>
    <string name="apakah_anda_bersekolah">Apakah anda bersekolah</string>
    <string name="pendidikan_tertinggi_yang_pernah_di_tamatkan">Pendidikan tertinggi yang pernah di tamatkan</string>
    <string name="jurusan_pendidikan">Jurusan pendidikan</string>
    <string name="apakah_anda_lulus_pada_periode_2021_2022">Apakah anda lulus pada periode 2021–2022</string>
    <string name="pernah_mendapat_sertifikat_dari_pelatihan_khusus">Pernah mendapat sertifikat dari pelatihan khusus</string>
    <string name="tempat_tinggal_anda_pada_februari_2017">tempat tinggal anda pada februari 2017</string>
    <string name="gangguan_pada_penglihatan">Gangguan pada penglihatan</string>
    <string name="gangguan_pada_pendengaran">Gangguan pada pendengaran</string>
    <string name="gangguan_ketika_berjalan_naik_tangga">Gangguan ketika berjalan/naik tangga</string>
    <string name="gangguan_ketika_menggerakkan_tangan_jari">Gangguan ketika menggerakkan tangan/jari</string>
    <string name="gangguan_ketika_berbicara_berkomunikasi">Gangguan ketika berbicara/berkomunikasi</string>
    <string name="jika_mengalami_gangguan_lainnya">Jika mengalami gangguan lainnya</string>
    <string name="jika_bekerja_pada_minggu_ini">Jika bekerja pada seminggu terakhir</string>
    <string name="pekerjaan_lain_pada_seminggu_terakhir">Pekerjaan lain pada seminggu terakhir</string>
    <string name="membantu_pekerjaan_keluarga_orang_lain">Membantu pekerjaan keluarga/orang lain</string>
    <string name="jika_memiliki_pekerjaan">Jika memiliki pekerjaan</string>
    <string name="alasan_utama_anda_tidak_bekerja">Alasan utama anda tidak bekerja</string>
    <string name="jika_alasan_terkait_corona_covid19">Apakah alasan terkait Corona/Covid19</string>
    <string name="apakah_ada_jaminan_kembali_kerja">Apakah ada jaminan kembali kerja</string>
    <string name="jabatan_pada_tempat_kerja">Jabatan pada tempat kerja</string>
    <string name="pada_pekerjaan_anda">Pada pekerjaan anda</string>
    <string name="bergerak_dibidang_apakah">Bergerak dibidang apakah</string>
    <string name="apakah_status_pekerjaan_anda">Apakah status pekerjaan anda ?</string>
    <string name="penghasilan_bersih_selama_sebulan">Penghasilan bersih selama sebulan</string>
    <string name="perubahan_penghasilan">Perubahan penghasilan</string>
    <string name="kapan_mulai_bekerja">Kapan mulai bekerja</string>
    <string name="jumlah_jam_kerja_perhari">Jumlah jam kerja perhari</string>
    <string name="apakah_terjadi_perubahan_jam_kerja">Apakah Terjadi perubahan jam kerja</string>
    <string name="jumlah_jam_kerja_biasanya">Jumlah jam kerja biasanya</string>
    <string name="alasan_utama_perubahan_jam_kerja">Alasan utama perubahan jam kerja</string>
    <string name="apakah_alasan_terkait_corona_covid_19">Apakah alasan terkait Corona/Covid-19</string>
    <string name="apakah_menggunakan_internet_pada_pekerjaan">Apakah menggunakan internet pada pekerjaan</string>
    <string name="promosi">Promosi ?</string>
    <string name="komunikasi">Komunikasi?</string>
    <string name="transaksi_jual_beli">Transaksi/Jual/Beli</string>
    <string name="kegiatan_lainnya">Kegiatan lainnya.?</string>
    <string name="kegiatan_bekerja_dari_rumah">Kegiatan bekerja dari rumah</string>
    <string name="kendala_utama">Kendala utama</string>
    <string name="apakah_bekerja_di_tempat_keramaian">Apakah bekerja di tempat keramaian</string>
    <string name="lokasi_anda_bekerja">Lokasi anda bekerja</string>
    <string name="bekerja_sendiri_sepenuhnya">Bekerja sendiri sepenuhnya</string>
    <string name="lokasi_kerja_utama">Lokasi kerja utama</string>
    <string name="melakukan_perjalanan_pulang_dan_pergi">Melakukan perjalanan pulang dan pergi</string>
    <string name="apa_moda_transportasi">Apa moda transportasi</string>
    <string name="memiliki_lebih_dari_satu_pekerjaan">Memiliki lebih dari satu pekerjaan</string>
    <string name="jumlah_jam_kerja_seluruh_pekerjaan">Jumlah jam kerja seluruh pekerjaan</string>
    <string name="_1_belum_kawin">Belum kawin</string>
    <string name="_4_cerai_mati">Cerai mati</string>
    <string name="_3_cerai_hidup">Cerai hidup</string>
    <string name="_2_kawin">Kawin</string>
    <string name="belum_bersekolah">Belum bersekolah</string>
    <string name="masih_bersekolah">Masih bersekolah</string>
    <string name="tidak_bersekolah_lagi">Tidak bersekolah lagi</string>
    <string name="tidak_belum_tamat_sd">Tidak/Belum tamat SD</string>
    <string name="sd_mi_sdlb_paket_a">SD/MI/SDLB/Paket A</string>
    <string name="smp_mts_smplb_paket_b">SMP/MTs/SMPLB/Paket B</string>
    <string name="sma_ma_smlb_paket_c">SMA/MA/SMLB/Paket C</string>
    <string name="smk_mak">SMK/MAK</string>
    <string name="diploma_i_ii_iii">Diploma I/II/III</string>
    <string name="diploma_iv">Diploma IV</string>
    <string name="s1_s2_s3">S1/S2/S3</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="apakah_anda_mengalami_gangguan_tersebut">Apakah anda mengalami gangguan tersebut</string>
    <string name="sedikit_sedang">Sedikit/Sedang</string>
    <string name="parah">Parah</string>
    <string name="apakah_anda_melakukan_hal_tersebut">Apakah anda melakukan hal tersebut</string>
    <string name="pada_februari_2017_dimana_tempat_tinggal_anda">Pada Februari 2017, dimana tempat tinggal anda ?</string>
    <string name="dikabupaten_yang_sama_dengan_tempat_tinggal_sekrang">Dikabupaten yang sama dengan tempat tinggal sekrang</string>
    <string name="jika_berbeda">Jika berbeda</string>
    <string name="kota_kabupaten">Kota/Kabupaten</string>
    <string name="jika_diluar_negeri">Jika diluar negeri</string>
    <string name="negara">Negara</string>
    <string name="apa_alasan_utama_anda_tidak_bekerja_selama_seminggu_terakhir">Apa alasan utama Anda tidak bekerja selama seminggu terakhir ?</string>
    <string name="cuti">Cuti</string>
    <string name="sakit">Sakit</string>
    <string name="aturan_waktu_kerja_sistem_shift">Aturan waktu kerja/sistem shift</string>
    <string name="pemogokan_kerja">Pemogokan kerja</string>
    <string name="penurunan_aktivitas_ekonomi">Penurunan aktivitas ekonomi</string>
    <string name="penangguhan_kerja_cuaca_buruk_pergantian_musim_dan_lain_lain">Penangguhan kerja (cuaca buruk, pergantian musim dan lain-lain)</string>
    <string name="takut_terinfeksi_corona_covid_19">Takut terinfeksi Corona/Covid-19</string>
    <string name="karantina_mandiri">Karantina mandiri</string>
    <string name="selain_alasan_di_atas">Selain alasan di atas</string>
    <string name="tuliskan_alasan_anda">Tuliskan alasan anda</string>
    <string name="apakah_ada_jaminan_anda_kembali_bekerja_pada_tempat_kerja_sekarang">Apakah ada jaminan Anda kembali bekerja pada tempat kerja sekarang ?</string>
    <string name="tidak_akan_kembali">Tidak akan kembali</string>
    <string name="tidak_yakin_kembali">Tidak yakin kembali</string>
    <string name="tidak_tahu">Tidak tahu</string>
    <string name="berusaha_sendiri">Berusaha sendiri</string>
    <string name="berusaha_dibantu_pekerja_tidak_tetap_pekerja_keluarga_tidak_dibayar">Berusaha dibantu pekerja tidak tetap/ pekerja keluarga/ tidak dibayar</string>
    <string name="berusaha_dibantu_pekerja_tetap_dan_dibayar">Berusaha dibantu pekerja tetap dan dibayar</string>
    <string name="buruh_karyawan_pegawai">Buruh/karyawan/pegawai</string>
    <string name="pekerja_bebas_dipertanian">Pekerja bebas dipertanian</string>
    <string name="pekerja_bebas_di_nonpertanian">Pekerja bebas di nonpertanian</string>
    <string name="pekerja_keluarga_tidak_dibayar">Pekerja keluarga tidak dibayar</string>
    <string name="jumlah_karyawan_yang_dibayar">Jumlah karyawan yang dibayar</string>
    <string name="apakah_saat_ini_sedang_mengikuti_pelatihan">Apakah saat ini sedang mengikuti pelatihan</string>
    <string name="dibandingkan_dengan_bulan_februari_2021_apakah_terjadi_perubahan_rata_rata_pendapatan_bersih">Dibandingkan dengan bulan februari 2021, apakah terjadi perubahan rata-rata pendapatan bersih ?</string>
    <string name="ya_pendapatan_bertambah">Ya, pendapatan bertambah</string>
    <string name="ya_pendapatan_berkurang">Ya, pendapatan berkurang</string>
    <string name="pada_februari_2021_belum_bekerja_di_pekerjaan_sekarang">Pada februari 2021 belum bekerja di pekerjaan sekarang</string>
    <string name="bulan">Bulan</string>
    <string name="tahun">Tahun</string>
    <string name="berapa_lama_waktu_yang_di_butuhkan">Berapa lama waktu yang di butuhkan</string>
    <string name="dalam_seminggu_terakhir_berapa_jumlah_jam_kerja_anda_perhari_dikurangi_jam_istirahat">Dalam seminggu terakhir, berapa jumlah jam kerja Anda perhari dikurangi jam istirahat ?</string>
    <string name="senin">Senin</string>
    <string name="selasa">Selasa</string>
    <string name="rabu">Rabu</string>
    <string name="kamis">Kamis</string>
    <string name="jumat">Jumat</string>
    <string name="sabtu">Sabtu</string>
    <string name="minggu">Minggu</string>
    <string name="jumlah">Jumlah</string>
    <string name="apakah_alasan_utama_perubahan_jam_kerja_anda">Apakah alasan utama perubahan jam kerja Anda ?</string>
    <string name="meningkatnya_beban_pekerjaan_karena_penambahan_konsumen_atau_permintaan">Meningkatnya beban pekerjaan karena penambahan konsumen atau permintaan</string>
    <string name="pengurangan_pekerja_ditempat_kerja">Pengurangan pekerja ditempat kerja</string>
    <string name="cuti_alasan_pribadi">Cuti/alasan pribadi</string>
    <string name="berkurangnya_bahan_baku">Berkurangnya bahan baku</string>
</resources>