<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="45dp"
        android:paddingBottom="65dp"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apa_alasan_utama_anda_tidak_bekerja_selama_seminggu_terakhir"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:padding="15dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/cuti"
        android:id="@+id/Sa"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="15dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/sakit"
        android:id="@+id/Sb"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="15dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/aturan_waktu_kerja_sistem_shift"
        android:id="@+id/Sc"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="15dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/pemogokan_kerja"
        android:id="@+id/Sd"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="15dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/penurunan_aktivitas_ekonomi"
        android:id="@+id/Se"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="15dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/penangguhan_kerja_cuaca_buruk_pergantian_musim_dan_lain_lain"
        android:id="@+id/Sf"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="15dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/takut_terinfeksi_corona_covid_19"
        android:id="@+id/Sg"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="15dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/karantina_mandiri"
        android:id="@+id/Sh"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/selain_alasan_di_atas"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:hint="@string/tuliskan_alasan_anda"
            android:id="@+id/Si"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/seles"
            android:text="@string/selesai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>