<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="65dp"
        android:layout_margin="45dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pendidikan_tertinggi_yang_pernah_di_tamatkan"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:padding="10dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/tidak_belum_tamat_sd"
        android:id="@+id/Ca"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="10dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/sd_mi_sdlb_paket_a"
        android:id="@+id/Cb"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="10dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/smp_mts_smplb_paket_b"
        android:id="@+id/Cc"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="10dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/sma_ma_smlb_paket_c"
        android:id="@+id/Cd"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="10dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/smk_mak"
        android:id="@+id/Ce"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="10dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/diploma_i_ii_iii"
        android:id="@+id/Cf"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="10dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/diploma_iv"
        android:id="@+id/Cg"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="10dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/s1_s2_s3"
        android:id="@+id/Ch"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>