<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="45dp"
        android:paddingBottom="65dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dalam_seminggu_terakhir_berapa_jumlah_jam_kerja_anda_perhari_dikurangi_jam_istirahat"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        />

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:padding="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_login"
            android:id="@+id/senin"
            android:inputType="date"
            android:hint="@string/senin"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login"
        android:id="@+id/selasa"
        android:inputType="date"
        android:hint="@string/selasa"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login"
        android:id="@+id/rabu"
        android:inputType="date"
        android:hint="@string/rabu"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login"
        android:id="@+id/kamis"
        android:inputType="date"
        android:hint="@string/kamis"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login"
        android:id="@+id/jumat"
        android:inputType="date"
        android:hint="@string/jumat"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login"
        android:id="@+id/sabtu"
        android:inputType="date"
        android:hint="@string/sabtu"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login"
        android:id="@+id/minggu"
        android:inputType="date"
        android:hint="@string/minggu"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:padding="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login"
        android:id="@+id/jumlah"
        android:inputType="date"
        android:hint="@string/jumlah"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bb"
        android:textAllCaps="false"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/selesai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>