<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="65dp"
        android:layout_margin="45dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apakah_alasan_utama_perubahan_jam_kerja_anda"
            android:layout_marginTop="15dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            />

        <TextView
            android:padding="10dp"
            android:background="@drawable/bg_login"
            android:layout_marginTop="25dp"
            android:text="@string/meningkatnya_beban_pekerjaan_karena_penambahan_konsumen_atau_permintaan"
            android:id="@+id/Ca"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="10dp"
            android:background="@drawable/bg_login"
            android:layout_marginTop="25dp"
            android:text="@string/pengurangan_pekerja_ditempat_kerja"
            android:id="@+id/Cb"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="10dp"
            android:background="@drawable/bg_login"
            android:layout_marginTop="25dp"
            android:text="@string/sakit"
            android:id="@+id/Cc"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="10dp"
            android:background="@drawable/bg_login"
            android:layout_marginTop="25dp"
            android:text="@string/cuti_alasan_pribadi"
            android:id="@+id/Cd"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:padding="10dp"
            android:background="@drawable/bg_login"
            android:layout_marginTop="25dp"
            android:text="@string/berkurangnya_bahan_baku"
            android:id="@+id/Ce"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>

        <TextView
            android:padding="10dp"
            android:background="@drawable/bg_login"
            android:layout_marginTop="25dp"
            android:text="@string/takut_terinfeksi_corona_covid_19"
            android:id="@+id/Cf"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="10dp"
            android:background="@drawable/bg_login"
            android:layout_marginTop="25dp"
            android:text="@string/karantina_mandiri"
            android:id="@+id/Cg"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="10dp"
            android:background="@drawable/bg_login"
            android:layout_marginTop="25dp"
            android:text=""
            android:id="@+id/Ch"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_login"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/selain_alasan_di_atas"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:layout_height="wrap_content"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:hint="@string/tuliskan_alasan_anda"
                android:id="@+id/klj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/seles"
                android:text="@string/selesai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>