<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="45dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pada_februari_2017_dimana_tempat_tinggal_anda"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        />

    <TextView
        android:padding="15dp"
        android:background="@drawable/bg_login"
        android:layout_marginTop="25dp"
        android:text="@string/dikabupaten_yang_sama_dengan_tempat_tinggal_sekrang"
        android:id="@+id/Ha"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/jika_berbeda"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:hint="@string/kota_kabupaten"
            android:id="@+id/Hb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/sK"
            android:text="@string/selesai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:padding="15dp"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_login"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/jika_diluar_negeri"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:hint="@string/negara"
            android:id="@+id/Hc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/sN"
            android:text="@string/selesai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>